# AoC2023

./: README.md
python/: pyproject.toml
python/day_1/: part_1.py  part_2.py
python/day_2/: part_1.py  part_2.py
python/day_3/: part_1.py  part_2.py
python/day_4/: part_1.py
