[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = "advent of code 2023"
authors = ["ddoyle <ddoyle@synopsys.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
word2number = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
